--- a/lib/i18n/common_es.i18n.json
+++ b/lib/i18n/common_es.i18n.json
@@ -62,11 +62,6 @@
     }
   },
   "modals": {
-    "listTasksUpdate": {
-      "title": "Editar lista",
-      "placeholder": "Ingrese el nombre de la lista",
-      "errorEmptyName": "Ingrese un nombre de lista."
-    },
     "listTasksOptions": {
       "list": {
         "title": "Lista",
@@ -99,6 +94,12 @@
       "placeholder": "Ingrese el título de la lista",
       "errorEmptyName": "Ingrese un título de lista.",
       "button": "Crear lista"
+    },
+    "listTasksUpdate": {
+      "title": "Editar lista",
+      "placeholder": "Ingrese el título de la lista",
+      "errorEmptyName": "Ingrese un título de lista.",
+      "button": "Guardar Lista"
     },
     "listTasksDelete": {
       "title": "¿Eliminar lista?",
