--- a/lib/i18n/common.i18n.json
+++ b/lib/i18n/common.i18n.json
@@ -101,6 +101,10 @@
       "errorEmptyName": "Please enter a list title.",
       "button": "Save List"
     },
+    "listTasksArchived": {
+      "title": "Archived",
+      "content(rich)": "You want to move $listTitle to the archive folder? "
+    },
     "listTasksDelete": {
       "title": "Delete list?",
       "subtitle": "Are you sure you want to delete it?\nYou can't undo this action"
