--- a/lib/config/i18n/pages.i18n.json
+++ b/lib/config/i18n/pages.i18n.json
@@ -21,7 +21,7 @@
     }
   },
   "home": {
-    "title": "Tasks",
+    "title": "Tasking",
     "emptyListTasks": {
       "title": "There is no lists",
       "subtitle": "Press + to add the list"
@@ -42,6 +42,7 @@
     "edited": "Edited $time"
   },
   "settings": {
+    "title": "Settings",
     "general": {
       "title": "General",
       "backup": "Backup / Restore",
@@ -54,7 +55,7 @@
     },
     "moreInformation": {
       "title": "More information",
-      "about": "About Tasking"
+      "about": "About me"
     },
     "dangerZone": {
       "title": "Danger Zone",
