🔨 refactor: Changed ListTasksUpdate from Dialog to Modal

--- a/lib/config/i18n/en/common.i18n.json
+++ b/lib/config/i18n/en/common.i18n.json
@@ -47,7 +47,8 @@
     "delete": "Delete",
     "update": "Update",
     "confirm": "Confirm",
-    "restore": "Restore"
+    "restore": "Restore",
+    "save": "Save"
   },
   "utils": {
     "dateTimePicker": {
