--- a/lib/config/i18n/es/common.i18n.json
+++ b/lib/config/i18n/es/common.i18n.json
@@ -47,7 +47,8 @@
     "delete": "Eliminar",
     "update": "Actualizar",
     "confirm": "Confirmar",
-    "restore": "Restaurar"
+    "restore": "Restaurar",
+    "save": "Guardar"
   },
   "utils": {
     "dateTimePicker": {
