--- a/lib/config/i18n/es/modals.i18n.json
+++ b/lib/config/i18n/es/modals.i18n.json
@@ -1,10 +1,10 @@
 {
-  "listTasksAdd": {
-    "title": "Agregar una lista",
+  "listTasks": {
+    "titleAdd": "Agregar una lista",
+    "titleUpdate": "Editar lista",
     "colorLabel": "Selecciona un color",
     "placeholder": "Ingrese el título de la lista",
-    "errorEmptyName": "Ingrese un título de lista.",
-    "button": "Crear lista"
+    "errorEmptyName": "Ingrese un título de lista."
   },
   "listTasksOptions": {
     "list": {
