🔨 refactor(utils): Update Markdown loading to use URL

--- a/lib/config/i18n/en/common.i18n.json
+++ b/lib/config/i18n/en/common.i18n.json
@@ -48,7 +48,8 @@
     "update": "Update",
     "confirm": "Confirm",
     "restore": "Restore",
-    "save": "Save"
+    "save": "Save",
+    "accept": "Accept"
   },
   "utils": {
     "dateTimePicker": {
