--- a/lib/config/i18n/es/common.i18n.json
+++ b/lib/config/i18n/es/common.i18n.json
@@ -48,7 +48,8 @@
     "update": "Actualizar",
     "confirm": "Confirmar",
     "restore": "Restaurar",
-    "save": "Guardar"
+    "save": "Guardar",
+    "accept": "Aceptar"
   },
   "utils": {
     "dateTimePicker": {
