✨ feat(i18n): add 'select' to EN and ES translation files

--- a/lib/config/i18n/es/common.i18n.json
+++ b/lib/config/i18n/es/common.i18n.json
@@ -49,7 +49,8 @@
     "confirm": "Confirmar",
     "restore": "Restaurar",
     "save": "Guardar",
-    "accept": "Aceptar"
+    "accept": "Aceptar",
+    "select": "Seleccionar"
   },
   "utils": {
     "dateTimePicker": {
