--- a/lib/config/i18n/en/common.i18n.json
+++ b/lib/config/i18n/en/common.i18n.json
@@ -49,7 +49,8 @@
     "confirm": "Confirm",
     "restore": "Restore",
     "save": "Save",
-    "accept": "Accept"
+    "accept": "Accept",
+    "select": "Select"
   },
   "utils": {
     "dateTimePicker": {
