🎨 style: Improve code formatting and structure in list_tasks_page

--- a/lib/i18n/en/pages.i18n.json
+++ b/lib/i18n/en/pages.i18n.json
@@ -36,9 +36,7 @@
     "cardPendingTask": "$length Pending"
   },
   "listTasks": {
-    "completed": {
-      "title": "Completed"
-    },
+    "completed": "Completed  $length",
     "emptyTasks": {
       "title": "There is no tasks",
       "subtitle": "Press + to add the task"
