--- a/lib/i18n/es/pages.i18n.json
+++ b/lib/i18n/es/pages.i18n.json
@@ -36,9 +36,7 @@
     "cardPendingTask": "$length Pendientes"
   },
   "listTasks": {
-    "completed": {
-      "title": "Completados"
-    },
+    "completed": "Completados  $length",
     "emptyTasks": {
       "title": "No hay tareas",
       "subtitle": "Presione + para agregar una tarea"
