🌐 i18n: Add new modal labels for task_add_modal

--- a/lib/i18n/en/modals.i18n.json
+++ b/lib/i18n/en/modals.i18n.json
@@ -23,7 +23,10 @@
   },
   "taskAdd": {
     "placeholder": "Add a task",
-    "errorEmptyName": "Please enter a task."
+    "errorEmptyName": "Please enter a task.",
+    "addDateline": "Set dateline",
+    "addReminder": "Reminder me",
+    "addNotes": "Notes"
   },
   "taskReminder": {
     "change": "Change reminder",
