--- a/lib/i18n/es/modals.i18n.json
+++ b/lib/i18n/es/modals.i18n.json
@@ -23,7 +23,10 @@
   },
   "taskAdd": {
     "placeholder": "Agregar una tarea",
-    "errorEmptyName": "Ingrese una tarea."
+    "errorEmptyName": "Ingrese una tarea.",
+    "addDateline": "Fecha limite",
+    "addReminder": "Recordatorio",
+    "addNotes": "Notas"
   },
   "taskReminder": {
     "change": "Cambiar recordatorio",
