🧹 chore: Organize imports and file structure for app_router and related pages

--- a/lib/i18n/en/pages.i18n.json
+++ b/lib/i18n/en/pages.i18n.json
@@ -24,7 +24,7 @@
     "title": "Home"
   },
   "calendar": {
-    "title": "Calendario"
+    "title": "Calendar"
   },
   "lists": {
     "title": "Lists",
