✨ feat: enhance calendar task display logic and i18n support

--- a/lib/i18n/en/common.i18n.json
+++ b/lib/i18n/en/common.i18n.json
@@ -3,6 +3,7 @@
   "labels": {
     "appName": "Tasking",
     "language": "English",
+    "calendarDays": ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"],
     "shortDays": ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"],
     "shortMonths": [
       "Jan",
