🌐 i18n: Add support for home page drawer titles

--- a/lib/i18n/en/pages.i18n.json
+++ b/lib/i18n/en/pages.i18n.json
@@ -21,7 +21,15 @@
     }
   },
   "home": {
-    "title": "Home"
+    "title": "Home",
+    "drawer": {
+      "home": "My Day",
+      "important": "Important",
+      "calendar": "Calendar",
+      "tasks": "All Tasks",
+      "add_lists": "New list",
+      "settings": "Settings"
+    }
   },
   "calendar": {
     "title": "Calendar"
