🌐 i18n: Add support for task page button labels

--- a/lib/i18n/es/pages.i18n.json
+++ b/lib/i18n/es/pages.i18n.json
@@ -52,7 +52,8 @@
   "task": {
     "placeholderTitle": "Título",
     "placeholderNote": "Nota",
-    "edited": "Editado $time"
+    "edited": "Editado $time",
+    "addSteps": "Agregar pasos"
   },
   "settings": {
     "title": "Ajustes",
