--- a/lib/i18n/en/pages.i18n.json
+++ b/lib/i18n/en/pages.i18n.json
@@ -52,7 +52,8 @@
   "task": {
     "placeholderTitle": "Title",
     "placeholderNote": "Note",
-    "edited": "Edited $time"
+    "edited": "Edited $time",
+    "addSteps": "Add steps"
   },
   "settings": {
     "title": "Settings",
