--- a/lib/i18n/en/pages.i18n.json
+++ b/lib/i18n/en/pages.i18n.json
@@ -26,7 +26,7 @@
       "home": "My Day",
       "important": "Important",
       "calendar": "Calendar",
-      "tasks": "All Tasks",
+      "tasks": "Tasks",
       "add_lists": "New list",
       "settings": "Settings"
     }
