--- a/lib/i18n/es/pages.i18n.json
+++ b/lib/i18n/es/pages.i18n.json
@@ -26,7 +26,7 @@
       "home": "Mi día",
       "important": "Importante",
       "calendar": "Calendario",
-      "tasks": "Todas las tareas",
+      "tasks": "Tareas",
       "add_lists": "Nueva lista",
       "settings": "Ajustes"
     }
