🌐 i18n: localize delete action in more bottom sheets

--- a/lib/i18n/en/modals.i18n.json
+++ b/lib/i18n/en/modals.i18n.json
@@ -45,5 +45,11 @@
   },
   "archivedLists": {
     "title": "Archived"
+  },
+  "stepsMore": {
+    "delete": "Delete step"
+  },
+  "taskMore": {
+    "delete": "Delete task"
   }
 }
