--- a/lib/i18n/es/modals.i18n.json
+++ b/lib/i18n/es/modals.i18n.json
@@ -45,5 +45,11 @@
   },
   "archivedLists": {
     "title": "Archivados"
+  },
+  "stepsMore": {
+    "delete": "Eliminar paso"
+  },
+  "taskMore": {
+    "delete": "Eliminar tarea"
   }
 }
