🌐 i18n: add locale search labels

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -112,7 +112,11 @@
     "calendar": {
       "title": "Calendar"
     },
-    "search": {},
+    "search": {
+      "title": "Search",
+      "searching": "Searching...",
+      "empty": "No tasks found"
+    },
     "settings": {
       "title": "Settings",
       "page": {
