--- a/lib/i18n/strings_es.i18n.json
+++ b/lib/i18n/strings_es.i18n.json
@@ -112,7 +112,11 @@
     "calendar": {
       "title": "Calendario"
     },
-    "search": {},
+    "search": {
+      "title": "Buscar",
+      "searching": "Buscando...",
+      "empty": "No se encontraron tareas"
+    },
     "settings": {
       "title": "Ajustes",
       "page": {
